# Year3Projects

./: .gitignore  .gitmodules
AI/: Project1.py  Project2.clp
AI/Project3/: main.tex  sample.bib
DE/: Lab1.nb  Lab2-ex1.nb  Lab2-ex2.nb  Project1.nb  presentation.txt
DP/: Dispatcher view.pptx
DS/: acronyms.txt  template_licenta.lyx  template_licenta.tex  template_licenta2.lyx
DS/code/: clangtidy_1.py  clangtidy_2.py  clangtidy_3.py  clangtidy_4.py  clangtidy_test.py  comparingRanges.txt  dashboard_constructor.txt  dashboard_functions.coffee  echoclient.py  echoserver.py  embedJS.txt  example.html  example.pug  flask_1.py  flask_2.py  flask_3.py  flask_4.py  flask_dashboard.py  flask_master.py  flask_template.html  has_C_files.py  helper_flask.py  iemaillookup.py  interpolation.txt  linearSearch.txt  loop.txt  mailnotifier_default.py  mailnotifier_extended.py  modal_dashboard.coffee  module_spec.coffee  preferential_factory.py  simple_factory.py  try_command.py
GUI/: hello_world.c
GUI/spinning_head/: CMakeLists.txt  obj_loader.c
NET/Hw1/: WebCrawler.sln
NET/Hw2/: Client.cs  Listener.cs
NET/WebCrawler/: Program.cs  WebCrawler.csproj  packages.config
NM/: Lab1.nb  Lab2.py  Project.ipynb
OS/: final_shell.c
PE/Lab4/: main.py  shapes.py
PE/Lab5/: ex1.py  ex2.py  ex3.py
PE/Lab6/: army.py  bowman.py  lab6.py  player.py  scouter.py  soldier.py  swordsman.py
PE/Lab7/: ex1.py  ex2.py  ex3.py
PE/Labs/: lab1.py
PE/Labs1-3/: lab2.py  lab3.py
SC/: aes11.cpp  aes11.h
WT/Project/upload_app/upload_app/run/src/: CMakeLists.txt  templateSrc.cc
(+64 files in other folders)
